src/objects/Learning_Management_System__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Learning Management Systems</relationshipLabel>
        <relationshipName>Learning_Management_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Learning_Management_System_Active__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Learning_Management_System_Type__c</fullName>
        <label>Learning Management System Type</label>
        <picklist>
            <picklistValues>
                <fullName>BlackBoard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CourseCompass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brainhoney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desire2Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCollege</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LearningStudio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodlerooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sakai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Transition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <formula>Account__r.Primary_Selling_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Learning Management System</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LMS-{00000}</displayFormat>
        <label>LMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Management Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>